--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,8 @@ version = "1"
 default-features = false
 
 [dependencies]
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7.11", features = ["compat"] }
+tokio-stream = "0.1.15"
+futures = "0.3"
